--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'World War, 1914-1918 -- Juvenile fiction'
 - !lcc 'PZ'
+- GITenberg
 title: 'On the Road to Bagdad: A Story of Townshend''s Gallant Advance on the Tigris'
 url: http://www.gutenberg.org/ebooks/43081
